--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
     "dotenv": "^17.2.3",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
+    "react-i18next": "^16.5.3",
     "react-router-dom": "^7.9.2"
   },
   "devDependencies": {
