--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "jsdoc": "^4.0.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
     "vite": "npm:rolldown-vite@7.1.12"
